k8s/apps/wodore/apps/martin/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wd-martin
spec:
  replicas: 1
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: wd-martin
  template:
    metadata:
      labels:
        app: wd-martin
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: wd-martin
          image: ghcr.io/maplibre/martin:1.16.1
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsUser: 1001
            runAsGroup: 1001
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          command:
            - /bin/sh
            - -c
            - |
              martin --config /martin_sync/config/martin.yaml \
                --webui enable-for-all
          volumeMounts:
            - name: martin-sync
              mountPath: /martin_sync
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 15
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 512Mi
      volumes:
        - name: martin-sync
          persistentVolumeClaim:
            claimName: wd-martin-sync-v1
