k8s/apps/wodore/apps/martin/base/nginx-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wd-martin-cache
spec:
  type: ClusterIP
  selector:
    app: wd-martin-cache
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
