k8s/apps/wodore/apps/martin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wd-martin
spec:
  type: ClusterIP
  selector:
    app: wd-martin
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
